@@ -1,5 +1,10 @@
 2007-09-14	Joel Sherrill <joel.sherrill@oarcorp.com>
 
+	* networkconfig.h: Loopback only network configuration tweaked to have
+	a hostname.
+
+2007-09-14	Joel Sherrill <joel.sherrill@oarcorp.com>
+
 	* networkconfig.h: Loopback only network configuration. Use one of the
 	real ones as an example.
 
